Fix: "No matching files" was always visible

--- a/ide/app/spark_polymer_ui.css
+++ b/ide/app/spark_polymer_ui.css
@@ -91,12 +91,8 @@
   color: #ccc;
   display: block;
   font-size: 18px;
-  margin-top: 40px;
+  margin-top: 60px;
   text-align: center;
-}
-
-#fileNotFoundPlaceholder[hidden] {
-  display: none;
 }
 
 #sparkStatusContainer {
